Finish rollups. Fix return type now that we decided how to finish things.  Convert standard out to logging.

--- a/demo/src/main/resources/static/bulk.html
+++ b/demo/src/main/resources/static/bulk.html
@@ -9,6 +9,13 @@
   ,{"customerId":"1", "purchaseAmt":"275", "purchaseTime":"2020-04-01"}   
   ,{"customerId":"3", "purchaseAmt":"15", "purchaseTime":"2020-08-01"} 
   ,{"customerId":"1", "purchaseAmt":"51", "purchaseTime":"2020-08-01"}
+  ,{"customerId":"1", "purchaseAmt":"151", "purchaseTime":"2020-08-01"}
+  ,{"customerId":"1", "purchaseAmt":"0", "purchaseTime":"2020-08-01"}
+  ,{"customerId":"1", "purchaseAmt":"-3", "purchaseTime":"2020-08-01"}
+  ,{"customerId":"4", "purchaseAmt":"44", "purchaseTime":"2020-07-01"}
+  ,{"customerId":"1", "purchaseAmt":"5500", "purchaseTime":"2020-06-01"}
+  ,{"customerId":"-42", "purchaseAmt":"-42", "purchaseTime":"2020-10-01"}
+  ,{"customerId":"2", "purchaseAmt":"57", "purchaseTime":"2020-06-15"}
  ]
 </textarea>
 <input type="submit" value="Do your worst" style="display:block;">
